# 1-Memory

./: .gitignore  .mcp.json  README.md  hackathon.md  pyproject.toml
onememory/: cli.py  models.py
onememory/consolidation/: dreamer.py
onememory/mcp_server/: server.py
src/onememory/: __init__.py  cli.py  config.py  models.py
src/onememory/brain/: __init__.py  amygdala.py  cortex.py  hippocampus.py  prefrontal.py  repository.py
src/onememory/consolidation/: dreamer.py
src/onememory/interceptor/: addon.py  parsers.py  proxy.py
src/onememory/mcp_server/: server.py
